# dataloom

./: README.md
.github/workflows/: release.yml
docs/: arquitetura_de_dados.md  arquitetura_negocio.md  modelagem_fisica.sql  readme.md  representacoes_graficas.md  template_de_arquitetura.md
docs/R notebooks/: lucro.Rmd  lucro.html  lucro_novas_analises.Rmd  lucro_novas_analises.html  produto.Rmd  produto.html  vendedor.Rmd  vendedor.html
src/: .gitignore
src/data_pipeline/: .coverage  .env.example  README.md  app.py  makefile  pyproject.toml
src/data_pipeline/core/: clickhouse_client.py  data_processing.py  supabase_client.py  threads.py
src/data_pipeline/infra/: README.md  docker-compose.yml
src/data_pipeline/sql/: create_table.sql
src/data_pipeline/tests/: ci_test.py  clickhouse_test.py  data_processing_test.py  supabase_test.py
